fixed white space and some other css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3185,7 +3185,7 @@ Common CSS
 
 .about-default-wrapper .container {
     padding-bottom: 110px;
-    padding-top: 104px;
+    padding-top: 50px;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -6817,7 +6817,7 @@ span.price {
 }
 
 .shopping-checkout-wrap .checkout-page-login-wrap .login-accordion .card .card-body .login-wrap form .form-group .form-control {
-    border: 1px solid #e8e8e8;
+    border: 1px solid #827e7e;
     border-radius: 0;
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -7069,7 +7069,7 @@ span.price {
     border-radius: 0;
     -webkit-box-shadow: none;
     box-shadow: none;
-    border: 1px solid #e8e8e8;
+    border: 1px solid #827e7e;
     color: #626262;
     font-size: 14px;
     height: 50px;
@@ -8706,7 +8706,7 @@ span.price {
     -webkit-box-shadow: none;
     box-shadow: none;
     border-radius: 0;
-    border: 1px solid #e8e8e8;
+    border: 1px solid #827e7e;
     height: 60px;
     padding: 0 20px;
     font-size: 14px;
@@ -10656,7 +10656,7 @@ span.price {
 }
 
 .account-area .container {
-    padding-top: 95px;
+    /* padding-top: 95px; */
     padding-bottom: 100px;
 }
 
@@ -10687,7 +10687,7 @@ span.price {
 }
 
 .my-account-area {
-    padding: 110px 0 110px;
+    padding-bottom: 110px;
 }
 
 @media only screen and (max-width: 1199px) {
